# forth-interpreter

./: README.md  documentation.md  forth-interpreter.cabal
examples/: extensions.md  fibonacci.md
src/: Interpreter.hs  Main.hs  Parser.hs
