cabal-version:       2.2

name:                forth-interpreter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/VeryLongNicknameSuchWow/forth-interpreter
license:             MIT
license-file:        LICENSE
author:              VeryLongNicknameSuchWow
maintainer:          uwu@nyaaa.me
copyright:           2023 VeryLongNicknameSuchWow
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable forth-interpreter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
